--- a/Game2/StarKampf.csproj
+++ b/Game2/StarKampf.csproj
@@ -71,8 +71,10 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Textures\" />
+    <None Include="Content\unicorn.xnb" />
+    <None Include="Textures\unicorn.xnb" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
