Finlly collision, edge pan and fighting vs magic numbers

--- a/Game2/StarKampf.csproj
+++ b/Game2/StarKampf.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\map.txt" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
