--- a/Game2/StarKampf.csproj
+++ b/Game2/StarKampf.csproj
@@ -43,17 +43,21 @@
   <ItemGroup>
     <Compile Include="Building.cs" />
     <Compile Include="Camera2D.cs" />
+    <Compile Include="ConnectionManager.cs" />
     <Compile Include="Fighter.cs" />
     <Compile Include="Game1.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Interface.cs" />
-    <Compile Include="Map.cs" />
+    <Compile Include="Map.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="MovingUnit.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Unit.cs" />
+    <Compile Include="UnitsManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Lidgren.Network, Version=3.4.0.456, Culture=neutral, processorArchitecture=MSIL">
@@ -73,8 +77,9 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Textures\" />
+    <Content Include="Textures\unicorn.xnb" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
