--- a/Game2/StarKampf.csproj
+++ b/Game2/StarKampf.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="timeofbuilding.txt" />
     <Content Include="Content\map.txt" />
     <Content Include="Icon.ico" />
   </ItemGroup>
