--- a/StarKampf_server/StarKampf_server.csproj
+++ b/StarKampf_server/StarKampf_server.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Building.cs" />
     <Compile Include="Fighter.cs" />
     <Compile Include="MovingUnit.cs" />
     <Compile Include="Program.cs" />
