Builder and new Units

--- a/Game2/StarKampf.csproj
+++ b/Game2/StarKampf.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Support.cs" />
     <Compile Include="Theta Star.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="UnitsManager.cs" />
